--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --progress --colors --inline --hot",
+    "prod": "webpack --progress -p"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "bootstrap": "^3.3.7",
